--- a/dashboard/static/dashboard.css
+++ b/dashboard/static/dashboard.css
@@ -7,37 +7,6 @@
     font-family: "Rimouski";
 }
 
-.root {
-    height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(+35deg, #0e0f11 40%, #1c2329 100%);
-    display: grid;
-    grid-template-columns: 20% 30% 50%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-    grid-template-areas: "sunset-sunrise header weather weather" "foo foo weather weather" "temp temp forecast forecast" "light light forecast forecast" "spotify spotify forecast forecast";
-    font-family: 'Montserrat', sans-serif;
-}
-
-.header {
-    grid-area: header;
-    background-image: linear-gradient(+35deg, #191b1f 40%, #1c2329 100%);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: white;
-}
-
-.sunset-sunrise {
-    grid-area: sunset-sunrise;
-    background-image: linear-gradient(+35deg, #191b1f 40%, #1c2329 100%);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: white;
-}
-
 .sunset-sunrise-container {
     font-family: "Rimouski";
     color: white;
@@ -71,7 +40,7 @@
     align-items: center;
     justify-content: center;
     font-size: xx-large;
-    width: 30%;
+    width: 40%;
     height: 100%;
 }
 
@@ -233,7 +202,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    color: fuchsia;
+    color: blue;
 }
 
 .foo-green {
@@ -263,6 +232,74 @@
 #foo-date {
     color: white;
     font-size: x-large;
+}
+
+.temp-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "el-1 el-2";
+    height: 100%;
+    width: 100%;
+}
+
+.headline {
+    text-align: center;
+    color: white;
+}
+
+.temperature {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#text {
+    font-size: x-large;
+    color: white;
+}
+
+#icon {
+    color: grey;
+}
+
+#value {
+    color: white;
+    font-size: xx-large;
+    display: flex;
+    align-items: center;
+}
+
+/** Grid Layout */
+
+.root {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(+35deg, #0e0f11 40%, #1c2329 100%);
+    display: grid;
+    grid-template-columns: 20% 30% 50%;
+    grid-template-rows: 20% 20% 10% 20% 30%;
+    grid-template-areas: "sunset-sunrise header weather weather" "foo foo weather weather" "foo foo forecast forecast" "temp temp forecast forecast" "spotify spotify forecast forecast";
+    font-family: 'Montserrat', sans-serif;
+}
+
+.sunset-sunrise {
+    grid-area: sunset-sunrise;
+    background-image: linear-gradient(+35deg, #191b1f 40%, #1c2329 100%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: white;
+}
+
+.header {
+    grid-area: header;
+    background-image: linear-gradient(+35deg, #191b1f 40%, #1c2329 100%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: white;
 }
 
 .weather {
@@ -297,17 +334,35 @@
 
 .temp {
     grid-area: temp;
-    background-image: linear-gradient(+35deg, #191b1f 40%, #1c2329 100%);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
     margin-top: 10px;
     margin-left: 10px;
 }
 
-.light {
-    grid-area: light;
+.temp-el-inside {
+    grid-area: el-1;
     background-image: linear-gradient(+35deg, #191b1f 40%, #1c2329 100%);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.temp-el-outside {
+    grid-area: el-2;
+    background-image: linear-gradient(+35deg, #191b1f 40%, #1c2329 100%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.light {
+    grid-area: light;
+    /*background-image: linear-gradient(+35deg, #191b1f 40%, #1c2329 100%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     border-radius: 5px;
     margin-top: 10px;
     margin-left: 10px;
