--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -46,11 +46,13 @@
         <div class="weather-icon">
           <img id="wicon" src="icons/unknown.png" alt="Weather icon">
         </div>
-        <div class="temperature-description">
-          <p>-</p>
-        </div>
-        <div class="temperature-value">
-          <p>o<span>C</span></p>
+        <div class="description">
+          <div class="temperature-description">
+            <p>-</p>
+          </div>
+          <div class="temperature-value">
+            <p>o<span>C</span></p>
+          </div>
         </div>
       </div>
     </div>
